--- a/paga-web-astro/src/pages/index.astro
+++ b/paga-web-astro/src/pages/index.astro
@@ -17,7 +17,7 @@ import Layout from "../layouts/BaseLayout.astro";
           <img
             src="/slider/image1i.jpg"
             class="w-full h-full object-scale-down"
-            style="background-image: linear-gradient(to bottom, #0B4536, #60A917); object-position: top;"
+            style="background-image: linear-gradient(to bottom, #0B4536, #60A917); object-position: center;"
             alt="Investigación Sostenible"
           />
           <div
