--- a/paga-web-astro/src/pages/podcast.astro
+++ b/paga-web-astro/src/pages/podcast.astro
@@ -48,6 +48,7 @@ const temporadas = [
       { titulo: "T4-Episodio 1: Infraestructura verde en la Ciudad de México ", videoId: "bEhVzRyd-JA" },
       { titulo: "T4-Episodio 2: Hagamos Composta: Ideas que transforman", videoId: "vTPegDzfWr4" }, // Reemplazar VIDEO_ID
       { titulo: "T4-Episodio 3: Infraestructura verde en la Ciudad de México", videoId: "70kH4clXKXo" },
+      { titulo: "T4-Episodio 4: Protección del Medio Ambiente en el Sector Industrial", videoId: "_vmnnhTmUvY" },
     ],
   },
 ];
