logos a final de pagina

--- a/paga-web-astro/src/components/Footer.astro
+++ b/paga-web-astro/src/components/Footer.astro
@@ -11,7 +11,7 @@
       <!-- Logo Izquierdo -->
       <div class="flex-shrink-0">
         <img
-          src="/logos/logo.png"
+          src="/logos/lapp.png"
           alt="Logo izquierdo"
           class="h-32 w-auto md:h-40"
         />
@@ -39,7 +39,7 @@
       <!-- Logo Derecho -->
       <div class="flex-shrink-0">
         <img
-          src="/podcast/logoST_PODCAST.png"
+          src="/podcast/ST.png"
           alt="Logo CIIEMAD"
           class="h-32 w-auto md:h-40"
         />
