--- a/paga-web-astro/src/pages/podcast.astro
+++ b/paga-web-astro/src/pages/podcast.astro
@@ -369,7 +369,7 @@ const temporadas = [
           <img
             src="/redes/logo2/facebook.png"
             alt="Facebook"
-              class="w-12 h-12 hover:scale-110 transition-transform"
+            class="w-12 h-12 hover:scale-110 transition-transform"
           />
         </a>
         <a
@@ -429,6 +429,18 @@ const temporadas = [
           <img
             src="/redes/amazonmusic.png"
             alt="Amazon Music"
+            class="w-12 h-12 hover:scale-110 transition-transform"
+          />
+        </a>
+        <a
+          href="https://www.tiktok.com/@sustentaterra.tok"
+          target="_blank"
+          rel="noopener"
+          title="TikTok"
+        >
+          <img
+            src="/redes/logo2/tiktok.png"
+            alt="TikTok"
             class="w-12 h-12 hover:scale-110 transition-transform"
           />
         </a>
