Nombre de pagina

--- a/paga-web-astro/src/layouts/BaseLayout.astro
+++ b/paga-web-astro/src/layouts/BaseLayout.astro
@@ -9,7 +9,7 @@ import Footer from "../components/Footer.astro";
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SUSTENTA-LAPP / Nuestro trabajo</title>
+    <title>SUSTENTA-LAPP</title>
     <link rel="icon" type="image/png" href="/logos/ciiemad.png" />
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"
     ></script>
