--- a/paga-web-astro/src/layouts/BaseLayout.astro
+++ b/paga-web-astro/src/layouts/BaseLayout.astro
@@ -11,6 +11,9 @@ import Footer from "../components/Footer.astro";
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SUSTENTA-LAPP</title>
     <link rel="icon" type="image/png" href="/logos/ciiemad.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/logos/ciiemad-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/logos/ciiemad-16x16.png">
+  <link rel="apple-touch-icon" href="/logos/ciiemad-apple-touch.png">
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"
     ></script>
     <script async src="https://connect.facebook.net/es_LA/sdk.js"></script>
