Prueba favico raiz

--- a/paga-web-astro/src/layouts/BaseLayout.astro
+++ b/paga-web-astro/src/layouts/BaseLayout.astro
@@ -10,7 +10,7 @@ import Footer from "../components/Footer.astro";
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SUSTENTA-LAPP </title>
-    <link rel="icon" type="image/x-icon" href="/logos/ciiemad.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"
     ></script>
     <script async src="https://connect.facebook.net/es_LA/sdk.js"></script>
