--- a/paga-web-astro/src/pages/index.astro
+++ b/paga-web-astro/src/pages/index.astro
@@ -17,18 +17,16 @@ import Layout from "../layouts/BaseLayout.astro";
         <div class="swiper-slide relative">
           <img
             src="/banner/ss1.png"
-            src="/galeria/VISITA CECYT 7 A CIIEMAD TALLERES AMBIENTALES.jpg"
             class="w-full h-full object-cover"
-            class="w-full h-full object-contain bg-gray-900"
-            alt="Servicio Social"
           />
           <div
             class="absolute inset-0 bg-black bg-opacity-50 flex items-center justify-end pr-16"
           >
             <div class="text-right text-white max-w-lg">
               <h3 class="text-4xl font-bold mb-4 drop-shadow-lg">
-              <h3 class="text-4xl font-bold mb-4 drop-shadow-lg ">
-                LIBERA TU SERVICIO SOCIAL CON NOSOTROS
+                <a href="/contacto" class="hover:underline">
+                  LIBERA TU SERVICIO SOCIAL CON NOSOTROS
+                </a>
               </h3>
               <p class="text-xl drop-shadow-md">
                 Pon en práctica tus conocimientos y habilidades, contáctanos.
