--- a/paga-web-astro/src/pages/index.astro
+++ b/paga-web-astro/src/pages/index.astro
@@ -34,6 +34,29 @@ import Layout from "../layouts/BaseLayout.astro";
             </div>
           </div>
         </div>
+        <!-- Slide Podcast Dra. Cristina -->
+        <div class="swiper-slide relative">
+          <img
+            src="/banner/PodcastT4E5.jpg"
+            class="w-full h-full object-contain"
+            style="background-color: rgb(239, 225, 176);"
+            alt="Podcast Dra. Cristina Ayala Azcárraga"
+          />
+          <div
+            class="absolute inset-0 bg-black bg-opacity-50 flex items-center justify-end pr-16"
+          >
+            <div class="text-right text-white max-w-lg">
+              <h3 class="text-4xl font-bold mb-4 drop-shadow-lg">
+                <a href="/podcast" class="hover:underline">
+                  NUEVO PODCAST CON LA DRA. CRISTINA AYALA AZCÁRRAGA
+                </a>
+              </h3>
+              <p class="text-xl drop-shadow-md">
+                Escucha nuestro más reciente episodio sobre sustentabilidad.
+              </p>
+            </div>
+          </div>
+        </div>
         <div class="swiper-slide relative">
           <img
             src="/slider/image1i.jpg"
